--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -24,11 +24,16 @@
     },
     {
       "id": "1728534585739",
+      "title": "🎵 Música para Estudiar",
+      "url": "https://www.youtube.com/playlist?list=PLLswL1pDm9IwZ04PHG4pRf1W-0EfWzq6u"
+    },
+    {
+      "id": "1728534585740",
       "title": "🔗 Bienestar Estudiantil →",
       "url": "https://bien.estate"
     },
     {
-      "id": "1728534585740",
+      "id": "1728534585741",
       "title": "🤝 Taller de Ajedrez",
       "url": "https://ajedrezfamaf.com"
     }
